@@ -2,6 +2,9 @@ package local.socialnetwork.profileservice.util;
 
 import local.socialnetwork.profileservice.type.MimeType;
 
+import org.springframework.core.io.ClassPathResource;
+import org.springframework.core.io.Resource;
+
 import org.springframework.stereotype.Component;
 
 import org.springframework.web.multipart.MultipartFile;
@@ -21,11 +24,9 @@ public class ResourceUtil {
 
     public String getEncodedResource(String path) throws IOException {
 
-        var resourcePath = Paths.get(path);
+        Resource resource = new ClassPathResource(path);
 
-        byte[] byteResourcePath = Files.readAllBytes(resourcePath);
-
-        return Base64.getEncoder().encodeToString(byteResourcePath);
+        return Base64.getEncoder().encodeToString(resource.getInputStream().readAllBytes());
 
     }
 
